--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/papaparse": "^5.3.3"
+    "@types/papaparse": "^5.3.3",
+    "sass": "^1.54.4"
   }
 }
